--- a/src/components/ButtonPrompt/ButtonPrompt.scss
+++ b/src/components/ButtonPrompt/ButtonPrompt.scss
@@ -20,7 +20,6 @@
 
 .button-prompt-label {
   visibility: hidden;
-  display: block;
   color: white;
   font-family: 'Dogica', serif;
 
